# real_estate

./: Makefile  README.md  pyproject.toml
real_estate/: manage.py
real_estate/apps/agent/: apps.py  models.py  serializers.py  urls.py  views.py
real_estate/apps/agent/migrations/: 0001_initial.py
real_estate/apps/agent/templates/agent/: welcome.html
real_estate/apps/customer/: apps.py  models.py  serializers.py  urls.py  views.py
real_estate/apps/customer/migrations/: 0001_initial.py
real_estate/apps/main/: abstract_models.py  apps.py  models.py  serializers.py  urls.py  views.py
real_estate/apps/main/migrations/: 0001_initial.py
real_estate/apps/page/: apps.py  exceptions.py  models.py  serializers.py  validators.py  views.py
real_estate/apps/property/: apps.py  models.py  serializers.py  urls.py  views.py
real_estate/apps/property/migrations/: 0001_initial.py
real_estate/project/: settings.py  urls.py
real_estate/utils/: mailer.py  tokens.py
